cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_22211_Security_groups_should_not_allow_unrestricted_access_to_ports_with_high_risk.json
{
  "AwsAccountId": "072643944673",
  "CompanyName": "AWS",
  "Compliance": {
    "Status": "FAILED",
    "SecurityControlId": "EC2.19",
    "RelatedRequirements": [
      "NIST.800-53.r5 AC-4",
      "NIST.800-53.r5 AC-4(21)",
      "NIST.800-53.r5 CA-9(1)",
      "NIST.800-53.r5 CM-2",
      "NIST.800-53.r5 CM-2(2)",
      "NIST.800-53.r5 CM-7",
      "NIST.800-53.r5 SC-7",
      "NIST.800-53.r5 SC-7(11)",
      "NIST.800-53.r5 SC-7(16)",
      "NIST.800-53.r5 SC-7(21)",
      "NIST.800-53.r5 SC-7(4)",
      "NIST.800-53.r5 SC-7(5)"
    ],
    "AssociatedStandards": [
      {
        "StandardsId": "standards/aws-foundational-security-best-practices/v/1.0.0"
      },
      {
        "StandardsId": "standards/nist-800-53/v/5.0.0"
      }
    ]
  },
  "CreatedAt": "2025-03-07T13:29:17.330Z",
  "Description": "This control checks whether unrestricted incoming traffic for an Amazon EC2 security group is accessible to the specified ports [3389, 20, 23, 110, 143, 3306, 8080, 1433, 9200, 9300, 25, 445, 135, 21, 1434, 4333, 5432, 5500, 5601, 22, 3000, 5000, 8088, 8888] that are considered to be high risk. This control fails if any of the rules in a security group allow ingress traffic from '0.0.0.0/0' or '::/0' to those ports.",
  "FindingProviderFields": {
    "Types": [
      "Software and Configuration Checks/Industry and Regulatory Standards"
    ],
    "Severity": {
      "Normalized": 90,
      "Label": "CRITICAL",
      "Original": "CRITICAL"
    }
  },
  "FirstObservedAt": "2025-03-07T13:28:59.783Z",
  "GeneratorId": "security-control/EC2.19",
  "Id": "arn:aws:securityhub:ap-south-1:072643944673:security-control/EC2.19/finding/23025dcf-a308-45f7-9bf4-7e9fa8cf6a32",
  "LastObservedAt": "2025-08-19T14:15:14.563Z",
  "ProcessedAt": "2025-08-20T05:45:38.939Z",
  "ProductArn": "arn:aws:securityhub:ap-south-1::product/aws/securityhub",
  "ProductFields": {
    "RelatedAWSResources:0/name": "securityhub-vpc-sg-restricted-common-ports-669a5dbc",
    "RelatedAWSResources:0/type": "AWS::Config::ConfigRule",
    "aws/securityhub/ProductName": "Security Hub",
    "aws/securityhub/CompanyName": "AWS",
    "Resources:0/Id": "arn:aws:ec2:ap-south-1:072643944673:security-group/sg-0cb387ec0e423eb16",
    "aws/securityhub/FindingId": "arn:aws:securityhub:ap-south-1::product/aws/securityhub/arn:aws:securityhub:ap-south-1:072643944673:security-control/EC2.19/finding/23025dcf-a308-45f7-9bf4-7e9fa8cf6a32",
    "PreviousComplianceStatus": "FAILED"
  },
  "ProductName": "Security Hub",
  "RecordState": "ACTIVE",
  "Region": "ap-south-1",
  "Remediation": {
    "Recommendation": {
      "Text": "For information on how to correct this issue, consult the AWS Security Hub controls documentation.",
      "Url": "https://docs.aws.amazon.com/console/securityhub/EC2.19/remediation"
    }
  },
  "Resources": [
    {
      "Details": {
        "AwsEc2SecurityGroup": {
          "GroupName": "SG01",
          "OwnerId": "072643944673",
          "VpcId": "vpc-01a1e95d36441a0ca",
          "IpPermissions": [
            {
              "FromPort": 80,
              "ToPort": 80,
              "IpProtocol": "tcp",
              "IpRanges": [
                {
                  "CidrIp": "0.0.0.0/0"
                }
              ]
            },
            {
              "FromPort": 443,
              "ToPort": 443,
              "IpProtocol": "tcp",
              "IpRanges": [
                {
                  "CidrIp": "0.0.0.0/0"
                }
              ]
            },
            {
              "FromPort": 3389,
              "ToPort": 3389,
              "IpProtocol": "tcp",
              "IpRanges": [
                {
                  "CidrIp": "0.0.0.0/0"
                }
              ]
            }
          ],
          "IpPermissionsEgress": [
            {
              "IpProtocol": "-1",
              "IpRanges": [
                {
                  "CidrIp": "0.0.0.0/0"
                }
              ]
            }
          ],
          "GroupId": "sg-0cb387ec0e423eb16"
        }
      },
      "Id": "arn:aws:ec2:ap-south-1:072643944673:security-group/sg-0cb387ec0e423eb16",
      "Partition": "aws",
      "Region": "ap-south-1",
      "Type": "AwsEc2SecurityGroup"
    }
  ],
  "SchemaVersion": "2018-10-08",
  "Severity": {
    "Label": "CRITICAL",
    "Normalized": 90,
    "Original": "CRITICAL"
  },
  "Title": "Security groups should not allow unrestricted access to ports with high risk",
  "Types": [
    "Software and Configuration Checks/Industry and Regulatory Standards"
  ],
  "UpdatedAt": "2025-08-20T05:45:22.574Z",
  "Workflow": {
    "Status": "NEW"
  },
  "WorkflowState": "NEW"
}
